--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -15,7 +15,7 @@
 </div>
 
 <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword" v-if="status != 'done'">
-    <span>@Localizer["forgotPassword:instructions"]</span>
+    <span class="instructions">@Localizer["forgotPassword:instructions"]</span>
 
 
     <partial name="Shared/ErrorList"/>
