--- a/Nuages.Identity.UI/Pages/Account/Login.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Login.cshtml
@@ -16,7 +16,7 @@
     {
         <div class="sm:mx-auto sm:w-full sm:max-w-md">
             <p class="mt-2 text-center text-sm text-gray-600">
-                @Localizer["or"]
+                <label>@Localizer["or"]</label>
                 <a href="@ViewBag.RegistrationUrl" class="font-medium text-indigo-600 hover:text-indigo-500">
                     @Localizer["register.title"]
                 </a>
@@ -57,10 +57,10 @@
     {
         <div class="relative mt-6">
             <div class="absolute inset-0 flex items-center">
-                <div class="w-full border-t border-gray-300"></div>
+                <div class="w-full border-t border-gray-300 dark:border-white" ></div>
             </div>
             <div class="relative flex justify-center text-sm">
-                <span class="px-2 bg-white text-gray-500">
+                <span class="px-2 bg-white dark:bg-slate-900 text-gray-500 dark:text-white">
                     @Localizer["login:continueWith"]
                 </span>
             </div>
