--- a/Nuages.Identity.UI/Pages/Account/Manage/SecurityKey.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/SecurityKey.cshtml
@@ -17,7 +17,7 @@
             </div>
 
             <div class="mb-4 p-4" v-if="status == 'registering'" v-show="status == 'registering'" style="display: none">
-                <span class="text-3xl">
+                <span class="text-3xl dark:text-white">
                     <i class="fas fa-spinner fa-spin"></i> @Localizer["addSecurityKey:waiting"]
                 </span>
             </div>
