--- a/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
@@ -4,7 +4,7 @@
 @inject IOptions<NuagesIdentityOptions> IdentityOptions
 
 <!DOCTYPE html>
-<html lang="en" class="dark ">
+<html lang="en" class="dark">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -15,9 +15,9 @@
     <script src="https://kit.fontawesome.com/70b74b4315.js" crossorigin="anonymous"></script>
 
 </head>
-<body class="w-full">
+<body class="w-full   dark:bg-slate-900">
 
-<div class="w-full">
+<div class="w-full ">
     <partial name="_NavBar"/>
     <div class="min-h-full flex flex-col justify-start max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
