--- a/Nuages.Identity.UI/Pages/Account/Register.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Register.cshtml
@@ -19,7 +19,7 @@
 
 <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="login" id="formRegister" v-if="status != 'done'">
 
-    <span>@Localizer["register:instructions"]</span>
+    <span class="instructions">@Localizer["register:instructions"]</span>
     <partial name="Shared/ErrorList"/>
 
     <fieldset class="space-y-4" :disabled="status == 'sending'">
@@ -38,10 +38,10 @@
 {
     <div class="relative mt-6" v-if="status != 'done'">
         <div class="absolute inset-0 flex items-center">
-            <div class="w-full border-t border-gray-300"></div>
+            <div class="w-full border-t border-gray-300 dark:border-white"></div>
         </div>
         <div class="relative flex justify-center text-sm">
-            <span class="px-2 bg-white text-gray-500">
+            <span class="px-2 bg-white text-gray-500 dark:text-white dark:bg-slate-900">
                 @Localizer["register:continueWith"]
             </span>
         </div>
