--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -13,7 +13,7 @@
 
 
 <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status != 'done'">
-    <span>@ViewData["Instructions"]</span>
+    <span class="instructions">@ViewData["Instructions"]</span>
     <partial name="Shared/ErrorList"/>
 
     <fieldset class="space-y-4" :disabled="status == 'sending'" v-if="status != 'done'">
