--- a/Nuages.Identity.UI/Pages/Account/SendSMSCode.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/SendSMSCode.cshtml
@@ -8,7 +8,7 @@
 }
 
 <form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="loginSMS" id="formLoginSMS">
-    <span>@Localizer["loginWithSMS:instructions"]</span>
+    <span class="instructions">@Localizer["loginWithSMS:instructions"]</span>
     <partial name="Shared/ErrorList"/>
     <button v-on:click.prevent="loginSMS" class="primary full items-center" :disabled="status == 'sending'">
         @Localizer["loginWithSMS:send"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
