--- a/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
@@ -7,12 +7,12 @@
 }
 
 <div class="sm:mx-auto sm:w-full sm:max-w-md">
-    @if (ViewBag.LogoUrl != null)
-    {
-        <img class="mx-auto h-24" src="@ViewBag.LogoUrl" alt="Workflow">
-    }
+    @* @if (ViewBag.LogoUrl != null) *@
+    @* { *@
+    @*     <img class="mx-auto h-24" src="@ViewBag.LogoUrl" alt="Workflow"> *@
+    @* } *@
 
-    <h2 class="mt-6 page-header text-center ">
+    <h2 class="mt-6 page-header text-center dark:text-white">
         @ViewData["Title"]
     </h2>
 </div>
