--- a/Nuages.Identity.UI/Pages/Shared/PasswordRequirements.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/PasswordRequirements.cshtml
@@ -1,19 +1,19 @@
 @using Nuages.Identity.Services.AspNetIdentity
 @inject NuagesUserManager UserManager
 
-<div class="rounded-md bg-blue-50  p-4">
+<div class="rounded-md bg-blue-50 dark:bg-slate-800 dark:text-white p-4">
     <div class="flex">
         <div class="flex-shrink-0">
             <!-- Heroicon name: solid/exclamation -->
 
         </div>
         <div class="ml-3">
-            <h3 class="text-sm font-medium text-blue-800">
+            <h3 class="text-sm font-medium text-blue-800 dark:text-white">
                 @Localizer["passwordRequirement:title"]
             </h3>
             <div class="mt-2 text-sm text-blue-700">
 
-                <ul role="list" class="list-disc pl-5 space-y-1">
+                <ul role="list" class="list-disc pl-5 space-y-1 dark:text-white">
                     <li>
                         @Localizer.GetString("passwordRequirement:RequiredLength", UserManager.Options.Password.RequiredLength)
                     </li>
