--- a/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
@@ -12,7 +12,7 @@
 <div >
     <form class=" mt-4" method="POST" v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
         <fieldset class="space-y-4">
-            <span>@Localizer["mfa.instructions"]</span>
+            <span class="instructions">@Localizer["mfa.instructions"]</span>
             <partial name="Shared/ErrorList"/>
             <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="Code" required class="text-box" autocomplete=“off”>
 
@@ -35,8 +35,8 @@
 
     </form>
     <div class="text-sm mt-4">
-        <span>@Localizer["mfa.appNotAvailable"]</span>
-        <ul class="list-disc mt-2 ml-4">
+        <span class="dark:text-white">@Localizer["mfa.appNotAvailable"]</span>
+        <ul class="list-disc mt-2 ml-4 dark:text-white" >
             <li>
                 <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableRecoveryCodes"]</a>
             </li>
