--- a/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="mb-4 p-4">
-    <span class="text-green-700 font-medium">
+    <span class="green-success font-medium">
         <i class="fas fa-check"></i> @Model.StatusMessage
     </span>
 </div>
