--- a/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
@@ -13,7 +13,7 @@
             <span class="text-gray-500">@Localizer["changePassword:instructions"]</span>
 
             <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-                <span class="text-green-700 font-medium">
+                <span class="green-success font-medium">
                     <i class="fas fa-check"></i> @Localizer["changePassword:success"]
                 </span>
             </div>
