--- a/Nuages.Identity.UI/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ConfirmEmailChange.cshtml
@@ -10,7 +10,7 @@
     <div class="flex justify-center mt-6">
 
         <div class="flex flex-col">
-            <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
+            <i class="fa fa-check-circle green-success fa-3x text-center"></i>
             <span class="mt-4">@Localizer["changeEmail:success"]</span>
         </div>
     </div>
@@ -20,7 +20,7 @@ else
     <div class="flex justify-center mt-6">
 
         <div class="flex flex-col">
-            <i class="fa fa-circle-xmark text-red-700 fa-3x text-center"></i>
+            <i class="fa fa-circle-xmark text-red-700 dark:text-red-500 fa-3x text-center"></i>
             <span class="mt-4">@Localizer["changeEmail:error"]</span>
         </div>
     </div>
