--- a/Nuages.Identity.UI/Pages/Account/EmailNotConfirmed.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/EmailNotConfirmed.cshtml
@@ -11,7 +11,7 @@
 <partial name="Shared/ErrorList"/>
 
 <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-    <span class="text-green-700 font-medium">
+    <span class="green-success font-medium">
         <i class="fas fa-check"></i> @Localizer["emailNotConfirmed:seeEmail"]
     </span>
 </div>
