--- a/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
@@ -9,7 +9,7 @@
 
 
 <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-    <span class="text-green-700 font-medium">
+    <span class="green-success font-medium">
         <i class="fas fa-check"></i> @Localizer["register:accountCreated"]
     </span>
 </div>
@@ -36,7 +36,7 @@ else
 {
     <ul class="text-red-800 mb-3">
         <li class="flex">
-            <i class="fas fa-exclamation-circle text-red-700 hover:text-red-700 mt-1 mb-2"></i>
+            <i class="fas fa-exclamation-circle dark:text-red-500 text-red-700 hover:text-red-700 mt-1 mb-2"></i>
             <div class="ml-2 mr-2 mb-2">
                 @Model.ErrorMessage
             </div>
