--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -9,7 +9,7 @@
 
 
 <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-    <span class="text-green-700 font-medium">
+    <span class="green-success font-medium">
         <i class="fas fa-check"></i> @Localizer["forgotPassword:seeEmail"]
     </span>
 </div>
