--- a/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -12,7 +12,7 @@
     <span class="instructions">@Localizer["passwordLess:instructions"]</span>
     <partial name="Shared/ErrorList"/>
     <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done' && errors.length == 0" style="display: none">
-        <span class="text-green-700 font-medium">
+        <span class="green-success font-medium">
             <i class="fas fa-check"></i> @Localizer["passwordLess:seeEmail"]
         </span>
     </div>
