--- a/Nuages.Identity.UI/Pages/Account/LoginWithSecurityKey.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithSecurityKey.cshtml
@@ -8,37 +8,21 @@
     ViewData["Title"] = Localizer["mfa.title"];
 }
 
-
-<div >
+<div>
+    <form class="mt-4"  id="formLogin" autocomplete=“off”>
+        <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+            <span class="green-success font-medium">
+                <i class="fas fa-check"></i> @Localizer["loginWithSecurityKeys:success"]
+            </span>
+        </div>
+        <div class="mb-4 p-4" v-if="status == 'waiting'" v-show="status == 'waiting'" style="display: none">
+            <span class="text-2xl dark:text-white">
+                <i class="fas fa-spinner fa-spin"></i> @Localizer["loginWithSecurityKeys:waiting"]
+            </span>
+        </div>
+         <partial name="Shared/ErrorList"/>
+    </form>
     
-        <button v-on:click.prevent="login" class="primary full items-center" >
-            @Localizer["loginWithSecurityKeys.title"]<i class="fas ml-2" ></i>
-        </button>
-        
-    @* <form class=" mt-4" method="POST" v-on:submit.prevent="login" id="formLogin" autocomplete=“off”> *@
-    @*     <fieldset class="space-y-4"> *@
-    @*         <span>@Localizer["mfa.instructions"]</span> *@
-    @*         <partial name="Shared/ErrorList"/> *@
-    @*         <input id="code" name="code" type="text" autofocus="" v-model="code" placeholder="Code" required class="text-box" autocomplete=“off”> *@
-    @* *@
-    @*         @if (UIOptions.Value.Enable2FARememberDevice) *@
-    @*         { *@
-    @*             <div class="flex items-center justify-between"> *@
-    @*                 <div class="flex items-center"> *@
-    @*                     <input id="rememberMachine" name="rememberMachine" v-model="rememberMachine" type="checkbox" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded"> *@
-    @*                     <label for="rememberMachine" class="ml-2 block text-sm text-gray-900"> *@
-    @*                         @Localizer["mfa:rememberMachine"] *@
-    @*                     </label> *@
-    @*                 </div> *@
-    @*             </div> *@
-    @*         } *@
-    @* *@
-    @*         <button v-on:click.prevent="login" class="primary full items-center" :disabled="status == 'sending'"> *@
-    @*             @Localizer["login:connect"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i> *@
-    @*         </button> *@
-    @*     </fieldset> *@
-    @* *@
-    @* </form> *@
     <div class="text-sm mt-4">
         <span class="instructions">@Localizer["loginWithSecurityKeys.notAvailable"]</span>
         <ul class="list-disc mt-2 ml-4 dark:text-white">
@@ -54,7 +38,6 @@
                     <a id="recovery-code-login" asp-page="./SendSMSCode" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["mfa.appNotAvailableSMS"]</a>
                 </li>
             }
-
         </ul>
     </div>
 </div>
@@ -75,6 +58,7 @@
     </script>
 
     <script src="/js/pages/fido2/helpers.js"></script>
-    <script src="/js/pages/loginWithSecurityKeys.js"></script>
+    
     <script src="/js/pages/fido2/mfa.login.js"></script>
+    <script src="/js/pages/loginWithSecurityKeys.js"></script>
 }
