--- a/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
@@ -19,7 +19,7 @@
             </div>
 
             <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-                <span class="text-green-700 font-medium">
+                <span class="green-success font-medium">
                     <i class="fas fa-check"></i> @Localizer["changeEmail:seeEmail"]
                 </span>
             </div>
