--- a/Nuages.Identity.UI/Pages/Shared/ErrorList.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/ErrorList.cshtml
@@ -1,10 +1,10 @@
 
 
 <div class="mt-4 pl-4" v-if="errors.length > 0" v-show="errors.length > 0" style="display: none">
-    <ul class="text-red-800 mb-3">
+    <ul class="text-red-800 dark:text-red-500 dark:text-red-500 mb-3">
         <li class="flex " v-for="error in errors">
 
-            <i class="fas fa-exclamation-circle text-red-700 hover:text-red-700 mt-1 mb-2"></i>
+            <i class="fas fa-exclamation-circle hover:text-red-700dark:text-red-400 mt-1 mb-2"></i>
             <div class="ml-2 mr-2 mb-2">
                 {{error.message}}
             </div>
