--- a/Nuages.Identity.UI/Pages/Shared/_Error.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_Error.cshtml
@@ -4,11 +4,11 @@
             <!-- Heroicon name: solid/exclamation -->
         </div>
         <div class="ml-3">
-            <h3 class=" font-medium text-red-800">
+            <h3 class=" font-medium text-red-800 dark:text-red-600">
 
                 @Model?.Title
             </h3>
-            <div class="mt-2  text-red-700">
+            <div class="mt-2  text-red-700 dark:text-red-500">
                 @Model?.Message
 
             </div>
