--- a/Nuages.Identity.UI/wwwroot/css/tailwind.css
+++ b/Nuages.Identity.UI/wwwroot/css/tailwind.css
@@ -49,7 +49,7 @@
     }
 
     button.link {
-        @apply font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 outline-none;
+        @apply font-medium text-indigo-600 hover:text-indigo-500 dark:text-white  outline-none;
     }
 
     a {
