--- a/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        <div class="bg-indigo-50 dark:bg-slate-900 dark:border overflow-hidden shadow rounded-lg" v-if="showCodes" v-show="showCodes" style="display: none">
+        <div class="bg-indigo-50 dark:bg-slate-900 dark:border dark:border-slate-700 overflow-hidden shadow rounded-lg" v-if="showCodes" v-show="showCodes" style="display: none">
             <div class="px-4 py-5 sm:p-6">
                 <div class="flex flex-col space-y-4">
                     <div class="grid grid-cols-5 gap-2" id="recoveryCodes">
