--- a/Nuages.Identity.UI/Pages/Shared/PasswordRequirements.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/PasswordRequirements.cshtml
@@ -1,7 +1,7 @@
 @using Nuages.Identity.Services.AspNetIdentity
 @inject NuagesUserManager UserManager
 
-<div class="rounded-md bg-blue-50 dark:bg-slate-800 dark:text-white p-4">
+<div class="rounded-md bg-blue-50 dark:bg-slate-900 dark:text-white dark:border dark:border-slate-700 p-4">
     <div class="flex">
         <div class="flex-shrink-0">
             <!-- Heroicon name: solid/exclamation -->
