--- a/Nuages.Identity.UI/Pages/Account/Register.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Register.cshtml
@@ -36,16 +36,8 @@
 
 @if (Model.ExternalLogins.Count > 0)
 {
-    <div class="relative mt-6" v-if="status != 'done'">
-        <div class="absolute inset-0 flex items-center">
-            <div class="w-full border-t border-gray-300 dark:border-white"></div>
-        </div>
-        <div class="relative flex justify-center text-sm">
-            <span class="px-2 bg-white text-gray-500 dark:text-white dark:bg-slate-900">
-                @Localizer["register:continueWith"]
-            </span>
-        </div>
-    </div>
+    <partial name="Shared/SeparatorWithTitle" model="new { Title =  @Localizer["register:continueWith"] }"/>
+    
     <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="mt-4" v-if="status != 'done'">
         <ul>
 
